<resources>
    <string name="about_bhim">"BHIM - UPI"</string>
    <string name="about_bhim_summary">"Donate via UPI"</string>
    <string name="about_bitcoin_bch">"Bitcoin Cash"</string>
    <string name="about_bitcoin_bch_summary">"Donate via Bitcoin Cash (BCH)"</string>
    <string name="about_bitcoin_btc">"Bitcoin"</string>
    <string name="about_bitcoin_btc_summary">"Donate via Bitcoin (BTC)"</string>
    <string name="about_bitcoin_eth">"Ethereum"</string>
    <string name="about_bitcoin_eth_summary">"Donate via Ethereum (ETH)"</string>
    <string name="about_gitlab">"GitLab"</string>
    <string name="about_gitlab_summary">"Get the Aurora Droid source code from Aurora OSS on GitLab."</string>
    <string name="about_libera">"Libera Pay"</string>
    <string name="about_libera_summary">"Become patron on Libera Pay"</string>
    <string name="about_paypal">"Paypal"</string>
    <string name="about_paypal_summary">"Donate via PayPal"</string>
    <string name="about_telegram">"Telegram"</string>
    <string name="about_telegram_summary">"Join the Aurora Support group for discussions or suggestions."</string>
    <string name="about_xda">"Dev Thread"</string>
    <string name="about_xda_summary">"See the Aurora Droid XDA thread for discussions or suggestions."</string>
    <string name="action_about">About</string>
    <string name="action_add">Add</string>
    <string name="action_ask">Ask</string>
    <string name="action_blacklist">Blacklist</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_clear">Clear</string>
    <string name="action_clear_all">Clear all</string>
    <string name="action_close">Close</string>
    <string name="action_copied">Link copied to clipboard</string>
    <string name="action_copy">Copy Link</string>
    <string name="action_download">Download</string>
    <string name="action_downloads">Downloads</string>
    <string name="action_export">Export</string>
    <string name="action_favourite_add">Add to favourites</string>
    <string name="action_favourite_remove">Remove from favourites</string>
    <string name="action_favourites">Favourite apps</string>
    <string name="action_finish">Finish</string>
    <string name="action_get_local_apk">Get local APK</string>
    <string name="action_grant">Grant</string>
    <string name="action_home">Home</string>
    <string name="action_ignore">"Ignore this version"</string>
    <string name="action_import">Import</string>
    <string name="action_info">App Info</string>
    <string name="action_install">Install</string>
    <string name="action_installations">Installations</string>
    <string name="action_installed">Installed</string>
    <string name="action_installing">Installing</string>
    <string name="action_later">Later</string>
    <string name="action_loading">Loading</string>
    <string name="action_more">More</string>
    <string name="action_next">Next</string>
    <string name="action_open">Open</string>
    <string name="action_pause">Pause</string>
    <string name="action_recheck">Recheck</string>
    <string name="action_remove">Remove</string>
    <string name="action_remove_all">Remove all</string>
    <string name="action_reset">Reset</string>
    <string name="action_restart">Restart</string>
    <string name="action_resume">Resume</string>
    <string name="action_retry">Retry</string>
    <string name="action_save">Save</string>
    <string name="action_save_return">Save &amp; Return</string>
    <string name="action_select_all">Select all</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_show_user_only">Show user apps only</string>
    <string name="action_sortBy">Sort by</string>
    <string name="action_sync">Synchronize</string>
    <string name="action_syncing">Syncing</string>
    <string name="action_uninstall">Uninstall</string>
    <string name="action_unsupported">Incompatible App</string>
    <string name="action_update">Update</string>
    <string name="action_updates">Updates</string>
    <string name="action_use_mirror">Use mirror URL</string>
    <string name="action_whitelist">Whitelist</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="choose_button_label">Select</string>
    <string name="details_anti_features">Anti features</string>
    <string name="details_apk_suggested">Suggested</string>
    <string name="details_more">Read more</string>
    <string name="details_more_apps_dev">More apps from developer</string>
    <string name="details_more_apps_similar">Similar category apps</string>
    <string name="details_new_changes">"What's New"</string>
    <string name="details_no_anti_features">No anti features</string>
    <string name="details_no_changes">"No changelog provided by developer"</string>
    <string name="details_no_description">No description provided by the developer</string>
    <string name="details_no_handler">You don\'t have any available app that can handle %s.</string>
    <string name="details_no_permissions">No permissions are used.</string>
    <string name="details_other">Other versions</string>
    <string name="details_permissions">App permissions</string>
    <string name="details_permissions_desc">Aurora Droid uses following permissions</string>
    <string name="details_repo_desc">Select repositories to sync</string>
    <string name="dialog_repo_desc">Do you really wish to add</string>
    <string name="dialog_repo_list">Repository List</string>
    <string name="dialog_repo_title">Add Repository</string>
    <string name="dialog_sync_complete_positive">Restart now</string>
    <string name="dialog_sync_completed_desc">All repositories updated, it is recommended to restart the app after updates.</string>
    <string name="dialog_sync_completed_desc_alt">No new updates available</string>
    <string name="dialog_sync_desc">Do you wish to update apps from repositories ?</string>
    <string name="dialog_sync_desc_alt">Old data detected,there may be new updates, do you wish to sync all repositories ?</string>
    <string name="dialog_sync_negative">No</string>
    <string name="dialog_sync_positive">Yes</string>
    <string name="dialog_sync_title">Repo Updates</string>
    <string name="download_cancel_all">Cancel all</string>
    <string name="download_canceled">Canceled</string>
    <string name="download_clear_completed">Clear completed</string>
    <string name="download_completed">Downloaded</string>
    <string name="download_failed">Download Failed</string>
    <string name="download_force_clear_all">Force clear all</string>
    <string name="download_metadata">Getting metadata</string>
    <string name="download_none">No downloads</string>
    <string name="download_pause_all">Pause all</string>
    <string name="download_paused">Paused</string>
    <string name="download_progress">Downloading</string>
    <string name="download_queued">Queued</string>
    <string name="download_resume">Resume</string>
    <string name="download_resume_all">Resume all</string>
    <string name="error_app_not_found">"App not found"</string>
    <string name="error_app_not_installed">"No apps installed"</string>
    <string name="error_dir_access">Directory cannot be accessed</string>
    <string name="error_no_network">"No network connection"</string>
    <string name="error_no_updates">"No updates available"</string>
    <string name="error_search_not_found">"No matching app found"</string>
    <string name="error_unknown">"Unknown error occurred"</string>
    <string name="filter_date_added">Date Added</string>
    <string name="filter_date_updated">Date Updated</string>
    <string name="filter_name_az">Name A-Z</string>
    <string name="filter_name_za">Name Z-A</string>
    <string name="filter_size_max">Size Max</string>
    <string name="filter_size_min">Size Min</string>
    <string name="installer_status_failure">Installation failed</string>
    <string name="installer_status_failure_aborted">Installation cancelled</string>
    <string name="installer_status_failure_blocked">Installation was blocked</string>
    <string name="installer_status_failure_conflict">Conflicting package exists</string>
    <string name="installer_status_failure_incompatible">Incompatible app</string>
    <string name="installer_status_failure_invalid">Invalid or corrupted APK</string>
    <string name="installer_status_failure_storage">Insufficient memory space</string>
    <string name="installer_status_success">Successfully installed</string>
    <string name="installer_status_unknown">Unknown</string>
    <string name="installer_status_user_action">Waiting for user confirmation</string>
    <string name="menu_about">"About"</string>
    <string name="menu_downloads">Downloads</string>
    <string name="menu_repository">Repositories</string>
    <string name="menu_setting">"Settings"</string>
    <string name="pref_downloader_internal">"Download apps in internal storage"</string>
    <string name="pref_downloader_internal_desc">"If enabled, you will not able to install apps via Aurora Services"</string>
    <string name="pref_downloads">Downloads</string>
    <string name="pref_downloads_active_summary">Maximum number of active downloads</string>
    <string name="pref_downloads_active_title">Active download</string>
    <string name="pref_downloads_debug_summary">Enable download debugging to get detailed logs</string>
    <string name="pref_downloads_debug_title">Download debugging</string>
    <string name="pref_downloads_path_title">Download path</string>
    <string name="pref_downloads_strategy_summary">Select default download strategy, recommended Parallel Strategy for fastest download</string>
    <string name="pref_downloads_strategy_title">Download strategy</string>
    <string name="pref_downloads_wifi_title">Download using wifi only</string>
    <string name="pref_install_auto_summary">Apps are installed instantly after download completes</string>
    <string name="pref_install_auto_title">Auto install APKs post-download</string>
    <string name="pref_install_delete_summary">On devices running Android Pie + with root install method, APKs get deleted by default</string>
    <string name="pref_install_delete_title">Delete apk post-install</string>
    <string name="pref_install_mode_summary">Select mode of APK installation</string>
    <string name="pref_install_mode_title">Installation method</string>
    <string name="pref_install_profile_summary">"Select the target profile to install apps to. Only works with the root installation method"</string>
    <string name="pref_install_profile_title">"Installation profiles"</string>
    <string name="pref_installations">Installations</string>
    <string name="pref_network">Networks</string>
    <string name="pref_proxy_enable">Enable proxy</string>
    <string name="pref_proxy_host">Proxy host</string>
    <string name="pref_proxy_port">Proxy port</string>
    <string name="pref_proxy_type">Proxy type</string>
    <string name="pref_services_desc">Launch Aurora services</string>
    <string name="pref_services_title">Aurora Services</string>
    <string name="pref_ui">User Interface</string>
    <string name="pref_ui_theme_title">Theme</string>
    <string name="pref_ui_transparent">Transparent style</string>
    <string name="pref_ui_transparent_summary">Use transparent card style for category and link views</string>
    <string name="pref_updates_app_experimental">Allow experimental updates</string>
    <string name="pref_updates_app_experimental_desc">If enabled, beta/alpha builds will override stable builds</string>
    <string name="pref_updates_app_title">App Updates</string>
    <string name="pref_updates_repo_interval">Updates interval</string>
    <string name="pref_updates_repo_title">Repo Updates</string>
    <string name="title_categories">Categories</string>
    <string name="title_home">Aurora Droid</string>
</resources>