<!--
  ~ Aurora Droid
  ~ Copyright (C) 2019-20, Rahul Kumar Patel <whyorean@gmail.com>
  ~
  ~ Aurora Droid is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Aurora Droid is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Aurora Droid.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.aurora.filepicker.view.FilePickerPreference
        android:defaultValue="/sdcard:/mnt"
        android:key="PREFERENCE_DOWNLOAD_DIRECTORY"
        app:dependency="PREFERENCE_DOWNLOAD_INTERNAL"
        app:fallbackDir="/sdcard"
        app:iconSpaceReserved="false"
        app:rootDir="/mnt"
        app:selectionMode="single"
        app:selectionType="directory"
        app:summary="Select default download directory"
        app:title="@string/pref_downloads_path_title"
        app:txtTitle="Select Directory" />

    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:disableDependentsState="true"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_DOWNLOAD_INTERNAL"
        app:singleLineTitle="false"
        app:summary="@string/pref_downloader_internal_desc"
        app:title="@string/pref_downloader_internal" />

    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_DOWNLOAD_WIFI"
        app:singleLineTitle="false"
        app:title="@string/pref_downloads_wifi_title" />

    <SeekBarPreference
        android:defaultValue="3"
        android:key="PREFERENCE_DOWNLOAD_ACTIVE"
        android:max="12"
        android:summary="@string/pref_downloads_active_summary"
        android:title="@string/pref_downloads_active_title"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <ListPreference
        app:defaultValue="0"
        app:entries="@array/pref_download_strategy"
        app:entryValues="@array/pref_download_strategy_values"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_DOWNLOAD_STRATEGY"
        app:singleLineTitle="false"
        app:summary="@string/pref_downloads_strategy_summary"
        app:title="@string/pref_downloads_strategy_title" />

    <SwitchPreferenceCompat
        android:summary="@string/pref_downloads_debug_summary"
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_DOWNLOAD_DEBUG"
        app:singleLineTitle="false"
        app:title="@string/pref_downloads_debug_title" />
</androidx.preference.PreferenceScreen>
