<!--
  ~ Aurora Droid
  ~ Copyright (C) 2019-20, Rahul Kumar Patel <whyorean@gmail.com>
  ~
  ~ Aurora Droid is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Aurora Droid is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Aurora Droid.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:singleLineTitle="false"
        app:iconSpaceReserved="false"
        android:title="@string/pref_updates_repo_title" />
    <ListPreference
        android:defaultValue="0"
        app:singleLineTitle="false"
        app:iconSpaceReserved="false"
        android:entries="@array/pref_repo_updates_interval"
        android:entryValues="@array/pref_repo_updates_interval_values"
        android:key="PREFERENCE_UPDATES_INTERVAL"
        android:title="@string/pref_updates_repo_interval"
        app:useSimpleSummaryProvider="true" />
    <PreferenceCategory
        app:singleLineTitle="false"
        app:iconSpaceReserved="false"
        android:title="@string/pref_updates_app_title" />
    <SwitchPreference
        android:defaultValue="false"
        app:singleLineTitle="false"
        app:iconSpaceReserved="false"
        android:key="PREFERENCE_UPDATES_EXPERIMENTAL"
        android:summary="@string/pref_updates_app_experimental_desc"
        android:title="@string/pref_updates_app_experimental"
        app:useSimpleSummaryProvider="true" />
</androidx.preference.PreferenceScreen>
