<!--
  ~ Aurora Droid
  ~ Copyright (C) 2019, Rahul Kumar Patel <whyorean@gmail.com>
  ~
  ~ Aurora Droid is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Aurora Droid is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Aurora Droid.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="com.aurora.adroid.fragment.preference.DownloaderFragment"
        app:icon="@drawable/ic_downloads"
        app:title="@string/pref_downloads" />

    <Preference
        app:fragment="com.aurora.adroid.fragment.preference.InstallationFragment"
        app:icon="@drawable/ic_installation"
        app:title="@string/pref_installations" />

    <Preference
        app:fragment="com.aurora.adroid.fragment.preference.NetworkFragment"
        app:icon="@drawable/ic_network"
        app:title="@string/pref_network" />

    <Preference
        app:fragment="com.aurora.adroid.fragment.RepoFragment"
        app:icon="@drawable/ic_repo_alt"
        app:title="Repository" />


    <Preference
        app:fragment="com.aurora.adroid.fragment.preference.UIFragment"
        app:icon="@drawable/ic_ui"
        app:title="@string/pref_ui" />
</androidx.preference.PreferenceScreen>
