<?xml version="1.0" encoding="utf-8"?><!--
  ~ Aurora Droid
  ~ Copyright (C) 2019-20, Rahul Kumar Patel <whyorean@gmail.com>
  ~
  ~ Aurora Droid is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Aurora Droid is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Aurora Droid.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sort_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/margin_normal"
        android:paddingEnd="@dimen/margin_normal"
        app:checkedChip="@id/sort_date_updated"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/sort_name_az"
            style="@style/ViewStyle.Aurora.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_name_az" />

        <com.google.android.material.chip.Chip
            android:id="@+id/sort_name_za"
            style="@style/ViewStyle.Aurora.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_name_za" />

        <com.google.android.material.chip.Chip
            android:id="@+id/sort_size_min"
            style="@style/ViewStyle.Aurora.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_size_min" />

        <com.google.android.material.chip.Chip
            android:id="@+id/sort_size_max"
            style="@style/ViewStyle.Aurora.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_size_max" />

        <com.google.android.material.chip.Chip
            android:id="@+id/sort_date_updated"
            style="@style/ViewStyle.Aurora.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_date_updated" />

        <com.google.android.material.chip.Chip
            android:id="@+id/sort_date_added"
            style="@style/ViewStyle.Aurora.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_date_added" />
    </com.google.android.material.chip.ChipGroup>
</HorizontalScrollView>