<?xml version="1.0" encoding="utf-8"?><!--
  ~ Aurora Droid
  ~ Copyright (C) 2019-20, Rahul Kumar Patel <whyorean@gmail.com>
  ~
  ~ Aurora Droid is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Aurora Droid is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Aurora Droid.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/welcomeFragment"
        android:icon="@drawable/ic_home"
        android:orderInCategory="0"
        android:title="@string/action_home" />

    <item
        android:id="@+id/permissionFragment"
        android:icon="@drawable/ic_updates"
        android:orderInCategory="1"
        android:title="@string/action_updates" />

    <item
        android:id="@+id/repoFragment"
        android:icon="@drawable/ic_categories"
        android:orderInCategory="3"
        android:title="@string/title_categories" />
</menu>
