<!--
  ~ Aurora Droid
  ~ Copyright (C) 2019-20, Rahul Kumar Patel <whyorean@gmail.com>
  ~
  ~ Aurora Droid is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Aurora Droid is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Aurora Droid.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat
        android:key="PREFERENCE_ENABLE_PROXY"
        app:singleLineTitle="false"
        app:iconSpaceReserved="false"
        android:title="@string/pref_proxy_enable"
        app:defaultValue="false" />
    <ListPreference
        android:defaultValue="HTTP"
        app:singleLineTitle="false"
        app:iconSpaceReserved="false"
        android:dependency="PREFERENCE_ENABLE_PROXY"
        android:entries="@array/proxyTypeValues"
        android:entryValues="@array/proxyTypeValues"
        android:key="PREFERENCE_PROXY_TYPE"
        android:title="@string/pref_proxy_type"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        android:defaultValue="127.0.0.1"
        app:singleLineTitle="false"
        app:iconSpaceReserved="false"
        android:dependency="PREFERENCE_ENABLE_PROXY"
        android:key="PREFERENCE_PROXY_HOST"
        android:title="@string/pref_proxy_host"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        android:defaultValue="8118"
        app:singleLineTitle="false"
        app:iconSpaceReserved="false"
        android:dependency="PREFERENCE_ENABLE_PROXY"
        android:inputType="number"
        android:key="PREFERENCE_PROXY_PORT"
        android:title="@string/pref_proxy_port"
        app:useSimpleSummaryProvider="true" />
</androidx.preference.PreferenceScreen>
