<!--
  ~ Aurora Droid
  ~ Copyright (C) 2019-20, Rahul Kumar Patel <whyorean@gmail.com>
  ~
  ~ Aurora Droid is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Aurora Droid is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Aurora Droid.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:defaultValue="0"
        app:singleLineTitle="false"
        app:iconSpaceReserved="false"
        app:entries="@array/pref_themes"
        app:entryValues="@array/pref_themes_values"
        app:key="PREFERENCE_UI_THEME_2"
        app:title="@string/pref_ui_theme_title"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:singleLineTitle="false"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_UI_TRANSPARENT"
        app:summary="@string/pref_ui_transparent_summary"
        app:title="@string/pref_ui_transparent" />
</androidx.preference.PreferenceScreen>
